

CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(ParserFUTU LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserFUTU.cpp
	${PROJECT_SOURCE_DIR}/ParserFUTU.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../API/FUTU6.2/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../API/FUTU6.2/linux)
ADD_LIBRARY(ParserFUTU SHARED ${SRC})

IF (MSVC)
ELSE (GNUCC)
	SET(LIBS
		FTAPI
		FTAPIChannel
		protobuf
		dl
	)
	TARGET_LINK_LIBRARIES(ParserFUTU ${LIBS})
ENDIF()

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserFUTU PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

