
#1. Á°ÆÂÆöCMakeÁöÑÊúÄ‰ΩéÁâàÊú¨ÈúÄÊ±?
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

#2. Á°ÆÂÆöÂ∑•Á®ãÂê?
PROJECT(TraderFUTU LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/TraderFUTU.cpp
	${PROJECT_SOURCE_DIR}/TraderFUTU.h	
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../API/FUTU6.2/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../API/FUTU6.2/linux)
ADD_LIBRARY(TraderFUTU SHARED ${SRC})

IF(MSVC)
	SET(LIBS
		ws2_32
		)
ELSE(GNUCC)
	IF(WIN32)
		SET(LIBS
			dl
			boost_thread
			FTAPI
			FTAPIChannel
			protobuf
			ws2_32
			)
	ELSE(UNIX)
		SET(LIBS
			dl
			boost_thread
			FTAPI
			FTAPIChannel
			protobuf
			)
	ENDIF()
ENDIF()
TARGET_LINK_LIBRARIES(TraderFUTU ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(TraderFUTU PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

